--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=SWD392-Backend
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SWD392;trustServerCertificate=true;encrypt=false
+spring.datasource.username=sa
+spring.datasource.password=12345
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Hibernate/JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+# Jakarta Persistence Configuration
+jakarta.persistence.jdbc.url=jdbc:sqlserver://localhost:1433;databaseName=SWD392;trustServerCertificate=true;encrypt=false
+jakarta.persistence.jdbc.user=sa
+jakarta.persistence.jdbc.password=12345
+jakarta.persistence.jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
