refactor: rollbacked to previous configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
+# SQL init - handled by SqlFolderRunner, which scans classpath:sql/ at startup
+spring.jpa.defer-datasource-initialization=true
+
 # Jakarta Persistence Configuration
 jakarta.persistence.jdbc.url=jdbc:sqlserver://localhost:1433;databaseName=SWD392;trustServerCertificate=true;encrypt=false
 jakarta.persistence.jdbc.user=sa
