--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,12 @@ jakarta.persistence.jdbc.user=sa
 jakarta.persistence.jdbc.password=12345
 jakarta.persistence.jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+# MinIO Configuration
+minio.endpoint=https://minio-console.taiduc1001.net
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
+minio.bucket-name=swd392-bucket
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
