feat: Enhance ProductServiceImpl to convert image URLs to presigned URLs and update MinIO configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,10 @@ jakarta.persistence.jdbc.password=12345
 jakarta.persistence.jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # MinIO Configuration
-minio.endpoint=https://minio-console.taiduc1001.net
-minio.access-key=minioadmin
-minio.secret-key=minioadmin
+# Using console domain with API port 9000
+minio.endpoint=https://minio-console.taiduc1001.net:9000
+minio.access-key=swd392
+minio.secret-key=swd392@123
 minio.bucket-name=swd392-bucket
 
 # File Upload Configuration
